Create battery form
Created battery selection form

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  min-height: 100vh;
+  background-image: url("/car.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
