--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'intro_rust_gbase_2_line';
+  src: url('/introrustg-base2line-webfont.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   min-height: 100vh;
   background-image: url("/car.jpg");
