Fix transition for mobile header
Fixed dropdown transition for mobile header

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body {
   background-repeat: no-repeat;
 }
 
-
+/* 
 .custom {
   display: none;
   opacity: 0;
@@ -35,7 +35,7 @@ body {
   .open {
     opacity: 0;
   }
-}
+} */
 
 
 
